# deeplearning-fastai-pytorch

./: 01_intro.ipynb  02_production.ipynb  03_ethics.ipynb  04_mnist_basics.ipynb  05_pet_breeds.ipynb  06_multicat.ipynb  07_sizing_and_tta.ipynb  08_collab.ipynb  09_tabular.ipynb  10_nlp.ipynb  11_midlevel_data.ipynb  12_nlp_dive.ipynb  13_convolutions.ipynb  14_resnet.ipynb  15_arch_details.ipynb  16_accel_sgd.ipynb  17_foundations.ipynb  18_CAM.ipynb  19_learner.ipynb  20_conclusion.ipynb  README.md  pyproject.toml  ssls.sh
