[tool.poetry]
name = "deeplearning-fastai-pytorch"
version = "0.1.0"
description = ""
authors = ["foscraft <anyaribari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastai = "^2.7.16"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
